<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_token_is_empty">앱 사용 권한이 없습니다</string>
    <string name="accesstoken_does_not_exist">앱 사용 권한이 존재하지 않습니다</string>
    <string name="accesstoken_is_not_matched">인증 정보가 일치하지 않습니다</string>
    <string name="action_settings">Setting</string>
    <string name="activation_non_activation">활성화/비활성화</string>
    <string name="add_timer">예약 추가하기</string>
    <string name="add_widget">추가하기</string>
    <string name="agree_text_1">카드정보를 안전하게 </string>
    <string name="agree_text_2">암호화</string>
    <string name="agree_text_3">하여 전송합니다.</string>
    <string name="aircon_airvolume">바람세기</string>
    <string name="aircon_custom">사용자 지정</string>
    <string name="aircon_etc">기타</string>
    <string name="aircon_maintainance_list">온도 유지 목록</string>
    <string name="aircon_mode">모드</string>
    <string name="aircon_reservation_change">예약 수정</string>
    <string name="aircon_reservation_list">예약 목록</string>
    <string name="aircon_title">에어컨</string>
    <string name="aircon_widget">위젯</string>
    <string name="all_switch_off">모든 스위치 끔</string>
    <string name="all_switch_on">모든 스위치 켬</string>
    <string name="allow_ble_permission">블루투스 권한 허용</string>
    <string name="already_added_checker_widget">이미 추가된 체커입니다.</string>
    <string name="already_added_remocon_widget">이미 추가된 리모컨입니다.</string>
    <string name="already_added_widget">이미 추가된 스위처입니다</string>
    <string name="already_returned">이미 반납을 신청한 상태입니다</string>
    <string name="am">오전</string>
    <string name="amount_due_upon_change">변경 시 결제금액</string>
    <string name="analysis">라이프스타일 분석하기</string>
    <string name="analyzing">라이프 스타일을 분석 중입니다.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer3_no">반려동물이 걱정되지 않고</string>
    <string name="answer3_yes">반려동물이 걱정되고</string>
    <string name="answer4_no">빈집털이가 걱정되지 않고</string>
    <string name="answer4_yes">빈집털이가 걱정되고</string>
    <string name="answer_kakaotalk">카카오톡으로 문의하기</string>
    <string name="app_name">I/O</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_name">I/O</string>
    <string name="at_once">한번에</string>
    <string name="auth_number_text">인증 번호</string>
    <string name="authentication_successful">인증 성공</string>
    <string name="authnumber_is_wrong">인증번호가 틀렸습니다</string>
    <string name="battery">배터리 </string>
    <string name="battery_null">-</string>
    <string name="billing_terms_text">정기 과금 이용약관</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="broken_connection">스위처와의 연결이 끊겼습니다</string>
    <string name="button_text_signal_type_1">문제 해결하기</string>
    <string name="button_text_signal_type_2">예약기능 써보기</string>
    <string name="button_text_signal_type_3">위젯 설정하기</string>
    <string name="buy_now">바로 구매하기</string>
    <string name="buyer">주문자</string>
    <string name="buying_type_change_menu">결제방식 변경</string>
    <string name="cafe_link_bluetooth_trouble">http://cafe.naver.com/switcherofio/2413</string>
    <string name="cafe_link_lg_o_widget">https://cafe.naver.com/switcherofio/2911</string>
    <string name="can_not_find_the_switcher">연결 가능한 스위처를 찾을수 없습니다</string>
    <string name="can_not_use_bluetooth">블루투스를 사용할 수 없음</string>
    <string name="cancel">취소</string>
    <string name="canceled_share_code_change_message">공유코드 변경을 취소했습니다</string>
    <string name="card_companies_selection">카드사 선택</string>
    <string name="card_discount_info">지금(무료체험 중) 결제 카드를 등록하시면 1,000원 할인 됩니다.</string>
    <string name="card_number_is_wrong">유효하지 않은 카드번호 입니다</string>
    <string name="card_using_info">무료 사용 종료 이후부터 해당 카드로 자동 과금이 진행되며, 과금을 원하지 않으실 경우 무료 사용 기간 내에 무료 반납이 가능하니 안심하세요. \n(한달 무료 체험하신 고객님만 과금됩니다.)</string>
    <string name="certification_number_received_fail">인증번호를 수신하는데 실패하였습니다</string>
    <string name="change">변경하기</string>
    <string name="change_card_text">카드 변경하기</string>
    <string name="change_plan_by_kakaotalk_text">카톡으로 결제 플랜 변경하기</string>
    <string name="change_plan_text">변경하기</string>
    <string name="changed_card_info_message">카드 정보를 변경하였습니다</string>
    <string name="changed_payment_card">결제 카드를 변경하였습니다</string>
    <string name="changed_payment_plan_message">결제 플랜 정보를 변경하였습니다</string>
    <string name="changed_share_code_message">공유코드를 변경했습니다</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charge_switcher">스위처를 충전해주세요!</string>
    <string name="checker_history_name">히스토리</string>
    <string name="checker_is_close">\t닫힘</string>
    <string name="checker_is_open">\t열림</string>
    <string name="checker_name">체커</string>
    <string name="checker_name_setting">체커 이름</string>
    <string name="checker_setting">체커 설정</string>
    <string name="checker_setting_name">체커 설정</string>
    <string name="checker_try_page">https://try.i-o.studio/#/checker</string>
    <string name="checker_warning_title">초기화 기능은 제품의 양도를 위해 소유자 정보를 삭제할때 사용하는 기능입니다. \n초기화를 원하실 경우, \n초기화 버튼을 눌러 연결되는 카카오톡으로 \n초기화 사유를 남겨주시면 \n원격으로 초기화를 도와드리겠습니다.</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete">예약 설정이 완료되었습니다.</string>
    <string name="completed_request_return_message">반납 신청이 완료되었습니다</string>
    <string name="completed_update_firmware">펌웨어 업데이트를 완료했습니다. 스위처를 다시 연결해주세요.</string>
    <string name="confirm">확인</string>
    <string name="confirm_change_plan">정말로 결제 플랜을 바꾸시겠습니까?</string>
    <string name="connect_main_switcher">메인 스위처 연결하기</string>
    <string name="connect_switcher">I/O 제품을 연결하세요</string>
    <string name="connected">연결됨</string>
    <string name="connecting">연결중</string>
    <string name="current_battery">남은 배터리</string>
    <string name="current_text">현재 </string>
    <string name="custom_command">사용자 지정</string>
    <string name="customer_does_not_exist">등록되지 않은 사용자입니다.</string>
    <string name="delivery_free_button_text">우체국 택배(무료)</string>
    <string name="hello_text">스마트 집사를\n경험해 보세요</string>
    <string name="help_return_info1">스위처 리스트 화면 &gt; 마이 페이지 &gt; 반납하고자 하는 스위처 선택 &gt; 반납하기 버튼 클릭 &gt; 반납 예약 완료.</string>
    <string name="help_return_info2">반납하고자 하는 스위처 화면 &gt; 우측 상단 아이콘 클릭 &gt; 반납하기 버튼 클릭 &gt; 반납 예약 완료.</string>
    <string name="help_return_info3">- 만약 반납 예약이 진행되지 않을 경우, 아래 링크를 통해 카카오톡으로 문의 주세요.\n- 저녁 6시 이전 문의는 당일 답변 드립니다.</string>
    <string name="help_return_info4">카카오톡으로 문의하기 &gt;</string>
    <string name="help_return_topic1">반납 방법 1</string>
    <string name="help_return_topic2">반납 방법 2</string>
    <string name="info_phone_number1">*본인 확인을 위해 </string>
    <string name="info_phone_number2">휴대폰 번호 </string>
    <string name="info_phone_number3">를 입력해주세요</string>
    <string name="initialize">초기화하기</string>
    <string name="other_delivery_button_text">유료 택배 정보</string>
    <string name="payment_card_changes">결제 카드 변경</string>
    <string name="payment_fail_message1">스위처 사용 기간이 만료되었습니다.</string>
    <string name="payment_fail_message2">사용 기간은 </string>
    <string name="payment_fail_message3"> 입니다.</string>
    <string name="payment_fail_message4">결제를 원하시면 </string>
    <string name="payment_fail_message5">전화로 문의</string>
    <string name="payment_fail_message6">해주시기 바랍니다.</string>
    <string name="payment_try_again">결제 다시 시도</string>
    <string name="phone_number_text">핸드폰 번호</string>
    <string name="return_box_info1">제품 본체만 </string>
    <string name="return_box_info2">튼튼한 박스</string>
    <string name="return_box_info3">에 담아</string>
    <string name="return_box_info4">택배로 보내주세요. 반납이 확인되면 바로 자동 과금이 정지됩니다.</string>
    <string name="terms_of_use">서비스 이용약관 및 개인정보 취급방침</string>
    <string name="thanks_text">그동안 I/O 제품을\n사용해주셔서 감사합니다!</string>
    <string name="warning_initialize1">주인의 정보는 모두 삭제되지만, 블루투스 연결이 요구되는 예약 설정은 초기화되지 않습니다.</string>
    <string name="warning_initialize2">판매 혹은 양도를 원하시는 경우 먼저 블루투스를 연결하여 예약 설정을 지워주세요.</string>
    <string name="warning_title">스위처 초기화를 진행하면 소유권을 잃습니다. 진행하시겠습니까?</string>
</resources>