<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/rl_root"
    android:background="@color/very_light_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="18dp"
        android:paddingTop="23dp"
        android:paddingRight="18dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/charcoal_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/help_return_topic1"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/cool_grey_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:text="@string/help_return_info1"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/charcoal_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/help_return_topic2"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/cool_grey_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:text="@string/help_return_info2"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/cool_grey_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/help_return_info3"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/periwinkle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_return_info4"
            android:onClick="onMoveKakaotalkButtonClicked"/>
    </LinearLayout>
</LinearLayout>
