<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/lin_root"
    android:tag="layout/fragment_return_info_0"
    android:paddingTop="15dp"
    android:paddingBottom="35dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="20sp"
        android:textColor="@color/charcoal_grey"
        android:gravity="center"
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/thanks_text"/>
    <ImageView
        android:background="@drawable/ic_return_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="75"/>
        <RelativeLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="209">
            <RelativeLayout
                android:gravity="center_horizontal"
                android:id="@+id/rl_box_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/cool_grey_two"
                    android:id="@+id/tv_return_box_info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_box_info1"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/periwinkle"
                    android:id="@+id/tv_return_box_info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_box_info2"
                    android:layout_toRightOf="@+id/tv_return_box_info1"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/cool_grey_two"
                    android:id="@+id/tv_return_box_info3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_box_info3"
                    android:layout_toRightOf="@+id/tv_return_box_info2"/>
            </RelativeLayout>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/cool_grey_two"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_box_info4"
                android:layout_below="@+id/rl_box_info"/>
        </RelativeLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="75"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="40"/>
        <TextView
            android:textSize="17sp"
            android:textColor="@color/periwinkle"
            android:gravity="center"
            android:background="@drawable/shape_periwinkle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/delivery_free_button_text"
            android:layout_weight="280"
            android:onClick="onDeliveryButtonClicked"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="40"/>
    </LinearLayout>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/charcoal_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_delivery_button_text"
        android:onClick="onOtherDeliveryButtonClicked"/>
</LinearLayout>
