<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="255"
        android:layout_centerHorizontal="true">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/slate_grey"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="15dp"
            android:text="@string/warning_title"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="@color/bluegrey"
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:text="@string/warning_initialize1"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="@color/bluegrey"
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/warning_initialize2"
            android:layout_below="@+id/text1"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="52">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/periwinkle"
            android:gravity="center"
            android:id="@+id/btn_initialize"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="24dp"
            android:text="@string/initialize"
            android:layout_alignParentRight="true"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/slate_grey"
            android:gravity="center"
            android:id="@+id/btn_cancel"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:text="@string/cancel"
            android:layout_toLeftOf="@+id/btn_initialize"/>
    </RelativeLayout>
</LinearLayout>
