<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/start"
    android:paddingLeft="18dp"
    android:paddingRight="22dp"
    android:paddingBottom="22dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="12sp"
        android:textColor="@color/white"
        android:id="@+id/tv_terms_of_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/terms_of_use"
        android:layout_alignParentBottom="true"
        android:onClick="onTermsOfUseButtonClicked"/>
    <TextView
        android:textSize="28sp"
        android:textColor="@color/white"
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hello_text"
        android:layout_above="@+id/tv_terms_of_use"/>
    <TextView
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_name"
        android:layout_above="@+id/tv_hello"/>
    <ImageButton
        android:background="@drawable/btn_start_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="onAuthMenuButtonClicked"/>
</RelativeLayout>
