<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:background="@color/very_light_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="28"/>
        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="72">
            <ImageView
                android:background="@drawable/ic_pay_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="24"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="63">
            <TextView
                android:textSize="13sp"
                android:textColor="@color/cool_grey_two"
                android:gravity="center"
                android:id="@+id/tv_payment_fail_message1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_fail_message1"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/lin_payment_fail_message2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_payment_fail_message1">
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/cool_grey_two"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_fail_message2"/>
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/periwinkle"
                    android:gravity="center"
                    android:id="@+id/tv_start_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/periwinkle"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="~"/>
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/periwinkle"
                    android:gravity="center"
                    android:id="@+id/tv_end_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/cool_grey_two"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_fail_message3"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/lin_payment_fail_message3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin_payment_fail_message2">
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/cool_grey_two"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_fail_message4"/>
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/periwinkle"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_fail_message5"/>
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/cool_grey_two"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_fail_message6"/>
            </LinearLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="53"/>
        <LinearLayout
            android:orientation="horizontal"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="56">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/periwinkle"
                android:gravity="center"
                android:background="@drawable/shape_periwinkle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/payment_try_again"
                android:layout_weight="280"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="21"/>
        <RelativeLayout
            android:gravity="center"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="24">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/charcoal_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_card_changes"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"/>
    </LinearLayout>
</RelativeLayout>
