<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:tag="layout/fragment_auth_phone_number_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:paddingLeft="18dp"
        android:paddingTop="29dp"
        android:paddingRight="18dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="240">
                <EditText
                    android:textSize="16sp"
                    android:textColor="@color/charcoal_grey"
                    android:textColorHint="@color/cloudy_blue"
                    android:id="@+id/et_phone_number"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/phone_number_text"
                    android:numeric="integer"
                    android:imeOptions="actionDone"/>
                <RelativeLayout
                    android:background="@color/pale_grey"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/et_phone_number"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="102"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rl_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="61dp"
            android:layout_below="@+id/ll_phone_number">
            <TextView
                android:textSize="14sp"
                android:textColor="@color/cool_grey_two"
                android:id="@+id/tv_info1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_phone_number1"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_info1">
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/periwinkle"
                    android:gravity="center"
                    android:id="@+id/tv_info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_phone_number2"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/cool_grey_two"
                    android:gravity="center"
                    android:id="@+id/tv_info3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_phone_number3"
                    android:layout_toRightOf="@+id/tv_info2"/>
            </RelativeLayout>
        </RelativeLayout>
        <ImageButton
            android:background="@drawable/btn_start_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_info"
            android:layout_alignParentRight="true"
            android:onClick="onNextButtonClicked"/>
    </RelativeLayout>
</FrameLayout>
